Blender cannot interpret Right Click for Wacom Tablet #48625

Closed
opened 2016-06-09 16:16:32 +02:00 by jen · 26 comments

System Information

Graphics:
ATI Radeon 5770 (x2)

System Software Overview:

System Version:	OS X 10.11.5 (15F34)
Kernel Version:	Darwin 15.5.0
Boot Volume:	Macintosh HD
Boot Mode:	Normal
Secure Virtual Memory:	Enabled
System Integrity Protection:	Enabled
Model Name:	Mac Pro
Model Identifier:	MacPro5,1
Processor Name:	Quad-Core Intel Xeon
Processor Speed:	2.4 GHz
Number of Processors:	2
Total Number of Cores:	8
L2 Cache (per Core):	256 KB
L3 Cache (per Processor):	12 MB
Memory:	14 GB
Processor Interconnect Speed:	5.86 GT/s
Boot ROM Version:	MP51.007F.B03
SMC Version (system):	1.39f11
SMC Version (processor tray):	1.39f11

Wacom Driver info:
Intros PT S CTH-480
Version 1.00
Driver version: 6.3.16-12

Blender Version
Broken: 2.77a abf6f08

Short description of error

Blender interprets "right click" as "left click," only for my Wacom pen and tablet. I've assigned all buttons to be "Right Click" on my pen and it still does not work properly.

Tried reinstalling Wacom drivers, resetting and redownloading Blender, restarting system, plugging into different USB ports... no success.

Exact steps for others to reproduce the error

Does not work for any .blend files
default.blend

USB Device info:
Intuos PTS:

Product ID:	0x0302
Vendor ID:	0x056a  (WACOM Co., Ltd.)
Version:	1.00
Speed:	Up to 12 Mb/sec
Manufacturer:	Wacom Co.,Ltd.
Location ID:	0xfa230000 / 4
Current Available (mA):	1000
Current Required (mA):	498
Extra Operating Current (mA):	0
**System Information** Graphics: ATI Radeon 5770 (x2) System Software Overview: ``` System Version: OS X 10.11.5 (15F34) Kernel Version: Darwin 15.5.0 Boot Volume: Macintosh HD Boot Mode: Normal Secure Virtual Memory: Enabled System Integrity Protection: Enabled Model Name: Mac Pro Model Identifier: MacPro5,1 Processor Name: Quad-Core Intel Xeon Processor Speed: 2.4 GHz Number of Processors: 2 Total Number of Cores: 8 L2 Cache (per Core): 256 KB L3 Cache (per Processor): 12 MB Memory: 14 GB Processor Interconnect Speed: 5.86 GT/s Boot ROM Version: MP51.007F.B03 SMC Version (system): 1.39f11 SMC Version (processor tray): 1.39f11 ``` Wacom Driver info: Intros PT S CTH-480 Version 1.00 Driver version: 6.3.16-12 **Blender Version** Broken: 2.77a abf6f08 **Short description of error** Blender interprets "right click" as "left click," only for my Wacom pen and tablet. I've assigned all buttons to be "Right Click" on my pen and it still does not work properly. Tried reinstalling Wacom drivers, resetting and redownloading Blender, restarting system, plugging into different USB ports... no success. **Exact steps for others to reproduce the error** Does not work for any .blend files [default.blend](https://archive.blender.org/developer/F316566/default.blend) USB Device info: Intuos PTS: ``` Product ID: 0x0302 Vendor ID: 0x056a (WACOM Co., Ltd.) Version: 1.00 Speed: Up to 12 Mb/sec Manufacturer: Wacom Co.,Ltd. Location ID: 0xfa230000 / 4 Current Available (mA): 1000 Current Required (mA): 498 Extra Operating Current (mA): 0
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jenerator

Added subscriber: @jenerator

Added subscribers: @MikeErwin, @jensverwiebe, @brecht, @mont29

Added subscribers: @MikeErwin, @jensverwiebe, @brecht, @mont29

We need an OSX developper with a Wacom tablet to investigate that… @jensverwiebe, @brecht, @MikeErwin, one of you guys maybe?

We need an OSX developper with a Wacom tablet to investigate that… @jensverwiebe, @brecht, @MikeErwin, one of you guys maybe?

Added subscriber: @duanemoody

Added subscriber: @duanemoody

I can verify this error. Mapping anything on the tablet as right-click (e.g. the accessory buttons) acts as a left-click.

I suspect OS X Blender's method for polling the input is lower level than the OS would suggest (since the Wacom drivers are able to send the events correctly to other applications).

I can verify this error. Mapping anything on the tablet as right-click (e.g. the accessory buttons) acts as a left-click. I suspect OS X Blender's method for polling the input is lower level than the OS would suggest (since the Wacom drivers are able to send the events correctly to other applications).
Member

Hi folks
Until i abandoned OSX last years may, i always used to work in blender exclusively
with a wacom graphire4. I never experienced such problem, had used both pen buttons
always. ( but not flipped )
So this may be a new issue ?

Jens

Hi folks Until i abandoned OSX last years may, i always used to work in blender exclusively with a wacom graphire4. I never experienced such problem, had used both pen buttons always. ( but not flipped ) So this may be a new issue ? Jens

It's a bug in SDL2.

Here's GZDoom made with SDL and it also misdetects a right click from a Wacom device as a left click.

It's a bug in SDL2. Here's [GZDoom ](https://github.com/alexey-lysiuk/gzdoom-osx/releases/tag/0.2.0) made with SDL and it also misdetects a right click from a Wacom device as a left click.
Mike Erwin self-assigned this 2016-06-11 20:42:55 +02:00
Member

Sure, I'm familiar with this code & have some Wacom gear at home.

We don't use SDL to get tablet events, but maybe we have the same bug!

Sure, I'm familiar with this code & have some Wacom gear at home. We don't use SDL to get tablet events, but maybe we have the same bug!

Works correct for me on OS X 10.11 with a Wacom Bamboo, I can't reproduce the problem here. We don't use SDL for getting tablet events, so that's not the issue.

I've committed a possible fix for this issue, but can't test it myself. Please try tomorrow's build from https://builder.blender.org/download/ to see if the issue is fixed.

Works correct for me on OS X 10.11 with a Wacom Bamboo, I can't reproduce the problem here. We don't use SDL for getting tablet events, so that's not the issue. I've committed a possible fix for this issue, but can't test it myself. Please try tomorrow's build from https://builder.blender.org/download/ to see if the issue is fixed.
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
jen closed this issue 2016-06-13 18:12:00 +02:00
Author

Incredible. Checked out 2.77 cefbe8f and my Wacom tablet is now registering right clicks. Thanks a ton.

Incredible. Checked out 2.77 cefbe8f and my Wacom tablet is now registering right clicks. Thanks a ton.

Added subscriber: @Mathew-T-McNeill

Added subscriber: @Mathew-T-McNeill

Thanks, I came here with the same problem, and the daily build solved it for me. Mac/Intuos

Thanks, I came here with the same problem, and the daily build solved it for me. Mac/Intuos

Added subscriber: @camikepress

Added subscriber: @camikepress

Nightly build solved it for me as well with a Cintiq 27 QHD. Thanks!

Nightly build solved it for me as well with a Cintiq 27 QHD. Thanks!

In #48625#377848, @brecht wrote:
Works correct for me on OS X 10.11 with a Wacom Bamboo, I can't reproduce the problem here. We don't use SDL for getting tablet events, so that's not the issue.

I've committed a possible fix for this issue, but can't test it myself. Please try tomorrow's build from https://builder.blender.org/download/ to see if the issue is fixed.

You fixed it! If you could share with us how you did it, that would be great because even if you're not using SDL, I was able to confirm SDL (1&2) demonstrate the same problem.

> In #48625#377848, @brecht wrote: > Works correct for me on OS X 10.11 with a Wacom Bamboo, I can't reproduce the problem here. We don't use SDL for getting tablet events, so that's not the issue. > > I've committed a possible fix for this issue, but can't test it myself. Please try tomorrow's build from https://builder.blender.org/download/ to see if the issue is fixed. You fixed it! If you could share with us how you did it, that would be great because even if you're not using SDL, I was able to confirm SDL (1&2) demonstrate the same problem.

The fix was in 0b415700f4. It's basically giving [event type] priority over [event buttonNumber] to determine if it's the left, right or another button.

The fix was in 0b415700f4. It's basically giving `[event type]` priority over `[event buttonNumber]` to determine if it's the left, right or another button.

Added subscriber: @ajlanaltug

Added subscriber: @ajlanaltug

This comment was removed by @ajlanaltug

*This comment was removed by @ajlanaltug*

Here's an excerpt from the last support mail I got from Wacom:

We were able to replicate the issue and essentially, like you said, the driver thinks that when you are using the left and right click at the same time it overrides that command and uses it as a single click instead.

What you can try to do is:

Open Wacom Desktop Center> Click on the name of your device and go to Pen Settings
When you are there please click one of the dropdown lists for one of the SideSwitches
Then click on Keyboard> Modifier> Set the "Clicks" to Left and right
You can also try to find the specific command for that action in Blender, change it to a keyboard key and then set it as the "Keystroke" option on Pen Settings
Since this is a very specific issue in one specific application, downloading a previous driver might fix the issue if the steps above do not work

I tried it all, absolutely to no avail. So do I have to download a beta version of Blender to be able to use this new Wacom tablet? I don't wanna have to :( :( Can't this be fixed in a stability release of teh 2.91 series?

Here's an excerpt from the last support mail I got from Wacom: > We were able to replicate the issue and essentially, like you said, the driver thinks that when you are using the left and right click at the same time it overrides that command and uses it as a single click instead. > > What you can try to do is: > > Open Wacom Desktop Center> Click on the name of your device and go to Pen Settings > When you are there please click one of the dropdown lists for one of the SideSwitches > Then click on Keyboard> Modifier> Set the "Clicks" to Left and right > You can also try to find the specific command for that action in Blender, change it to a keyboard key and then set it as the "Keystroke" option on Pen Settings > Since this is a very specific issue in one specific application, downloading a previous driver might fix the issue if the steps above do not work I tried it all, absolutely to no avail. So do I have to download a beta version of Blender to be able to use this new Wacom tablet? I don't wanna have to :( :( Can't this be fixed in a stability release of teh 2.91 series?

So since this task has been marked as resolved, what's the solution???? I'm on 2.9.01 and 2.91. What do I need to do?

So since this task has been marked as resolved, what's the solution???? I'm on 2.9.01 and 2.91. What do I need to do?

Added subscriber: @giovincentini

Added subscriber: @giovincentini

Blender 3.0 and still have this issue. I can't use the clicks using a brand new Wacom Intuos Pro 2019 and the latest driver updated.

Blender 3.0 and still have this issue. I can't use the clicks using a brand new Wacom Intuos Pro 2019 and the latest driver updated.

still a bug in 4.0

still a bug in 4.0

You can open a new bug report with full details. This bug report from 8 years ago almost certainly had a different root cause.

You can open a new bug report with full details. This bug report from 8 years ago almost certainly had a different root cause.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48625
No description provided.