Attempted fix for T48625: tablet button configured to right click not working on OS X.